# price-prophet

./: .env.example  .gitignore  Dockerfile  README.md  dashboard.js  docker-compose.yml  index-chartjs.html  index.html  pyproject.toml  requirements.txt  styles.css
.github/workflows/: bump-version.yml  ci.yml  docker-publish.yml  python-publish.yml
app/: database.py  features.py  main.py  model.py  monitoring.py  retrieval.py
dags/: retrain_dag.py
tests/: conftest.py  test_api.py  test_features.py  test_model.py  test_monitoring.py
